Force sizes on quill to fix height issue on Safari.
Closes #91

--- a/app/assets/stylesheets/quilleditor.scss
+++ b/app/assets/stylesheets/quilleditor.scss
@@ -4,6 +4,14 @@
   display: inline-block;
   height: 200px;
   width: 600px;
+
+  .ql-toolbar {
+    height: 42px;
+  }
+
+  .ql-container {
+    height: 158px;
+  }
 }
 .pure-form label.large-group {
   vertical-align: top;
